unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Salik_Cost__c.field-meta.xml
<CustomField>
    <fullName>Salik_Cost__c</fullName>
    <label>Salik Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>