unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Substitutional_Vehicles_Cost_Per_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Substitutional_Vehicles_Cost_Per_Vehicle__c</fullName>
    <label>Substitutional Vehicles Cost Per Vehicle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>