unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Total_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Total_Depreciation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Depreciation Value of Vehicle, Refrigerator, Trailer</description>
    <label>Total Depreciation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>