unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Total_Resale_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Resale_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Resale Value of Vehicle, Refrigerator, Trailer</description>
    <label>Total Resale Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>