unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Total_Resale_Value_Min_resale_Dep_Diff__c.field-meta.xml
<CustomField>
    <fullName>Total_Resale_Value_Min_resale_Dep_Diff__c</fullName>
    <formula>(Total_Resale_Value__c* ET_Number_of_Vehicles__c ) +  Depreciation_Difference_to_other_Contrac__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Resale Value (Min resale+Dep Diff)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>