unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Total_Trailer_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Trailer_Price__c</fullName>
    <label>Total Trailer Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>