unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Total_Vehicles_Cost_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Total_Vehicles_Cost_Discounted__c</fullName>
    <label>Total Vehicles Cost(Discounted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>