unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Trailer_Current_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Current_Purchase_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Trailer Current Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>