unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Trailer_depreciation_type__c.field-meta.xml
<CustomField>
    <fullName>Trailer_depreciation_type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trailer depreciation type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>