unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Trailer_min_Resale_Value_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Trailer_min_Resale_Value_Percentage__c</fullName>
    <label>Trailer min Resale Value Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>