unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Trailer_Registration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Registration_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Trailer Registration Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>