unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Trailer_Repairs_And_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Repairs_And_Maintenance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Trailer Repairs And Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>