unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Vehicle_Notes__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>