unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Vehicle_Profit_Value_Target_Price__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Profit_Value_Target_Price__c</fullName>
    <label>Vehicle Profit Value Target Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>