unpackaged/main/default/objects/ET_Vehicle_Quote_Item__c/fields/Vehicles_Profit_Margin_Rate_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Vehicles_Profit_Margin_Rate_Discounted__c</fullName>
    <label>Vehicles Profit Margin Rate Discounted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>